fix: remove double scroll

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,6 +13,7 @@ body {
     background-size: cover;
     background-position: top center;
     background-repeat: no-repeat;
+    margin: 0;
 }
 
 // default display-flex layout class
